# poe2build

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_RECOMMENDER_GUIDE.md  BACKEND_FIX_REPORT.md  CLAUDE.md  FEATURES_SUMMARY.md  FINAL_BACKEND_FIX_REPORT.md  GUI_USAGE_GUIDE.md  How to query POE2 API.docx  POB2_AND_LEAGUE_FIX_REPORT.md  POE_NINJA_AI_GUIDE.md  PROJECT_FINAL_STATUS.md  RAG_POB2_使用指南.md  README.md  ai_build_recommender.py  complete_professional_gui.py  debug_import.py  dynamic_data_crawlers.py  intelligent_build_filter.py  ninja_trained_ai_recommender.py  pob2_github_downloader.py  pob2_import_code_generator.py  poe2_realistic_data_system.py  professional_ai_recommender.py  professional_pob2_gui.py  pyproject.toml  pytest.ini  rag_pob2_integrated_recommender.py  realistic_build_generator.py  requirements.txt  run_complete_gui.py  simple_gui_launcher.py  simple_test.py  test_ai_recommendations.py  test_complete_rag_pob2_integration.py  test_pob2_connection.py  test_rag_system.py  test_utils_implementation.py  unique_builds_database.py
.claude/: settings.local.json
.github/workflows/: test.yml
config_files/: .gitignore
core_ai_engine/: poe2_ai_orchestrator.py
data_storage/market_cache/: scout_items_Rise of the Abyssal.json
data_storage/ninja_cache/: meta_builds.json
data_storage/pob2_cache/: Costs.lua  GameVersions.lua  (+4 more)
dependencies/: requirements-gui.txt  requirements-windows.txt
docs/: 04_api_usage.md  07_troubleshooting.md  09_development_workflow.md  10_testing_strategy.md  README.md
examples/: demo_rag_system.py  final_rag_demo.py  simple_rag_demo.py  test_models.py
gui_apps/: demo_gui_backend_integration.py  demo_new_welcome_page.py  gui_with_console.py  poe2_complete_gui.py  poe2_integrated_gui.py  poe2_professional_gui.py  poe2_ultimate_gui.py  run_gui.py  setup_gui.py
prompts/: 01_foundation_setup.txt  02_data_models.txt  03_interfaces.txt  04_api_integration.txt  05_pob2_integration.txt  06_pob2_calculator.txt  07_rag_collector.txt  08_rag_vectorizer.txt  09_rag_ai_engine.txt  10_ai_orchestrator.txt  11_main_entry.txt  12_testing_suite.txt  13_web_architecture.txt  14_fastapi_server.txt  15_frontend_ui.txt  16_integration_testing.txt  17_deployment_web.txt  18_windows_gui_architecture.txt  19_gui_components.txt  20_main_window.txt  21_data_integration.txt  22_windows_features.txt  23_packaging_distribution.txt  24_resilience_system.txt  25_utils_helpers.txt
reference_docs/: 《流放之路2》生态系统程序化访问开发者指南：关键社区及官方工具API分析.docx
scripts/: benchmark_gui.ps1  build_gui.ps1  create_installer.ps1  run_tests.ps1  setup_dev_env.ps1
tests/: conftest.py  run_tests.py  test_config.json  test_config_advanced.py
tests_and_validation/: run_quick_tests.py  run_tests.py  test_console_output.py  test_gui_buttons.py  test_gui_quick.py  test_natural_language.py
(+202 files in other folders)
